--- a/AzureStorage.Demo/Views/AttendeeRegistration/Edit.cshtml
+++ b/AzureStorage.Demo/Views/AttendeeRegistration/Edit.cshtml
@@ -10,10 +10,15 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="RowKey" />
+            <input type="hidden" asp-for="ImageName" />
             <div class="form-group">
+                <div class="form-group">
+                    <label class="control-label">Upload Avatar</label>
+                    <input type="file" class="form-control" name="formFile" />
+                </div>
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
@@ -33,7 +38,8 @@
                 <input asp-for="Industry" class="form-control" />
                 <span asp-validation-for="Industry" class="text-danger"></span>
             </div>
-           
+         
+         
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
